# final-project-flow

./: README.md  action_recommendations.md  business_insights.md  data_analysis_findings.md  data_cleaned.csv  data_cleaning_log.md  flow.xlsx  generate_charts.py  statistical_analysis_report.md  visualization_code.md  viz_plan.md
db/f4395e5c-fbe0-421e-b94b-d01d8c40bdc3/: index_metadata.pickle
the_super_crew/: INSTALLATION.md  pyproject.toml  requirements.txt
the_super_crew/db/97099cfd-4187-4955-8d2c-ce56433351cf/: index_metadata.pickle
the_super_crew/src/the_super_crew/: __init__.py  main.py
the_super_crew/src/the_super_crew/crews/: __init__.py
the_super_crew/src/the_super_crew/crews/data_analist_crew/: __init__.py  data_analist_crew.py
the_super_crew/src/the_super_crew/crews/data_analist_crew/config/: agents.yaml  tasks.yaml
the_super_crew/src/the_super_crew/crews/data_analist_crew/data_analist_codes/: EDA.py  statistical_analisys.py
the_super_crew/src/the_super_crew/crews/visualization_crew/: visualizetion_crew.py
the_super_crew/src/the_super_crew/crews/visualization_crew/config/: agents.yaml  tasks.yaml
the_super_crew/supercrew_env/: pyvenv.cfg
