[project]
name = "the_super_crew"
version = "0.1.0"
description = "the_super_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.201.1,<1.0.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.14.0",
    "tabulate>=0.9.0",
]

[project.scripts]
kickoff = "the_super_crew.main:kickoff"
run_crew = "the_super_crew.main:kickoff"
plot = "the_super_crew.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
